新增分栏激活颜色变量 新增布局配置主题色或背景色时联动配置字体和背景颜色 修复图标选择未确认也修改表单值 优化打包发布不出现参考样例

--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -128,6 +128,9 @@ body,
   }
   .layout-el-aside-br-color {
     border-right: 1px solid var(--el-border-color-light, #ebeef5);
+    .el-scrollbar {
+      border-left: 1px solid var(--el-border-color-light, #ebeef5);
+    }
   }
   // pc端左侧导航样式
   .layout-aside-pc-220 {
@@ -140,6 +143,10 @@ body,
   }
   .layout-aside-pc-1 {
     width: 1px !important;
+    transition: width 0.3s ease;
+  }
+  .layout-aside-pc-0 {
+    width: 0px !important;
     transition: width 0.3s ease;
   }
   // 手机端左侧导航样式
