--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -37,6 +37,7 @@
   --next-color-seting-main: var(--next-color-seting) !important;
   --next-color-seting-aside: var(--next-color-hover) !important;
   --next-color-seting-header: var(--next-color-primary) !important;
+  --next-color-menuBarActiveColor: var(--next-color-white) !important;
 
   // element plus
   --el-color-white: var(--next-color-disabled) !important;
