修改http-client接口默认地址为环境变量VITE_API_URL配置 新增线上环境路径配置

--- a/gen/templates/http-client.ejs
+++ b/gen/templates/http-client.ejs
@@ -88,7 +88,7 @@ export class HttpClient<SecurityDataType = unknown> {
     private format?: ResponseType;
 
     constructor({ securityWorker, secure, format, ...axiosConfig }: ApiConfig<SecurityDataType> = {}) {
-        this.instance = axios.create({ ...axiosConfig, timeout: 60000, baseURL: axiosConfig.baseURL || "<%~ apiConfig.baseUrl %>" })
+        this.instance = axios.create({ ...axiosConfig, timeout: 60000, baseURL: axiosConfig.baseURL || import.meta.env.VITE_API_URL })
         this.secure = secure;
         this.format = format;
         this.securityWorker = securityWorker;
