--- a/src/theme/element.scss
+++ b/src/theme/element.scss
@@ -319,3 +319,27 @@
     overflow: auto;
   }
 }
+
+/* Form 表单
+------------------------------- */
+.el-form {
+  .el-col {
+    margin-bottom: 20px;
+  }
+}
+
+/* ColorPicker 颜色选择器
+------------------------------- */
+.el-color-predefine__color-selector {
+  border: 1px solid var(--el-border-color);
+}
+
+/* Button 按钮
+------------------------------- */
+.el-button:not(.is-circle) i.el-icon,
+.el-button i.iconfont,
+.el-button i.fa,
+.el-button--default i.iconfont,
+.el-button--default i.fa {
+  margin-right: 0px;
+}
