--- a/src/theme/media/form.scss
+++ b/src/theme/media/form.scss
@@ -8,6 +8,9 @@
     text-align: left !important;
     // 移动端 label 右对齐问题
     justify-content: flex-start !important;
+    height: unset !important;
+    line-height: unset !important;
+    margin-bottom: 5px;
   }
   .el-form-item__content {
     margin-left: 0 !important;
