新增上文件管理界面，实现查询和上传文件 修改api.ejs模板，添加接口文件名后缀Api 优化所有接口引用 权限管理优化菜单路由地址为绝对路径，权限点选择接口没有默认赋值的问题

--- a/gen/templates/api.ejs
+++ b/gen/templates/api.ejs
@@ -13,7 +13,7 @@ import { HttpClient, RequestParams, ContentType, HttpResponse } from "./<%~ conf
 import { <%~ dataContracts.join(", ") %> } from "./<%~ config.fileNames.dataContracts %>"
 <% } %>
 
-export class <%= apiClassName %><SecurityDataType = unknown><% if (!config.singleHttpClient) { %> extends HttpClient<SecurityDataType> <% } %> {
+export class <%= apiClassName %>Api<SecurityDataType = unknown><% if (!config.singleHttpClient) { %> extends HttpClient<SecurityDataType> <% } %> {
 <% if(config.singleHttpClient) { %>
   http: HttpClient<SecurityDataType>;
 
