--- a/gen/templates/http-client.ejs
+++ b/gen/templates/http-client.ejs
@@ -5,6 +5,7 @@ const { apiConfig, generateResponses, config } = it;
 import axios, { AxiosInstance, AxiosRequestConfig, AxiosResponse, HeadersDefaults, ResponseType, RawAxiosRequestHeaders } from 'axios'
 import { ElLoading, ElMessage, LoadingOptions } from 'element-plus'
 import { Local, Session } from '/@/utils/storage'
+import { useUserInfo } from '/@/stores/userInfo'
 
 export const adminTokenKey = 'admin-token'
 
@@ -14,6 +15,7 @@ export const getToken = () => {
 }
 // 设置token
 export const setToken = (token: any) => {
+  useUserInfo().setToken(token)
   return Local.set(adminTokenKey, token)
 }
 // 清除token
