新增滑块拼图验证组件my-slide-captcha，滑块拼图已优化适配任何宽度容器，无需手工指定滑块拼图的宽度和高度。 短信验证码组件使用滑块验证组件来发送短信 新增用户名登录和手机号登录表单验证 修复生成api和同步接口因为后端修改路径前缀异常的问题 修改国际化信息提示不正确的问题

--- a/src/theme/element.scss
+++ b/src/theme/element.scss
@@ -231,9 +231,9 @@
     .el-dialog {
       margin: 0 auto !important;
       position: absolute;
-      .el-dialog__body {
-        padding: 20px !important;
-      }
+      // .el-dialog__body {
+      //   padding: 20px !important;
+      // }
     }
   }
 }
