--- a/src/theme/media/layout.scss
+++ b/src/theme/media/layout.scss
@@ -8,6 +8,11 @@
     width: 80% !important;
   }
 
+  // 锁屏页
+  .layout-lock-screen-date-top {
+    display: none;
+  }
+
   .layout-navbars-breadcrumb-user-link-name {
     // display: none;
     max-width: 42px;
