--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -144,6 +144,8 @@ body,
   .layout-aside-pc-1 {
     width: 1px !important;
     transition: width 0.3s ease;
+    position: relative;
+    left: -1px;
   }
   .layout-aside-pc-0 {
     width: 0px !important;
