--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -145,7 +145,7 @@ body,
     width: 1px !important;
     transition: width 0.3s ease;
     position: relative;
-    left: -1px;
+    margin-left: -1px;
   }
   .layout-aside-pc-0 {
     width: 0px !important;
