--- a/src/theme/element.scss
+++ b/src/theme/element.scss
@@ -243,9 +243,12 @@
     .el-dialog {
       margin: 0 auto !important;
       position: absolute;
-      // .el-dialog__body {
-      //   padding: 20px !important;
-      // }
+      .el-dialog__body {
+        padding: 20px !important;
+      }
+      .el-dialog__footer {
+        padding: var(--el-dialog-padding-primary);
+      }
     }
   }
 }
